--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
 *{margin: 0; padding: 0; box-sizing: border-box;}
 a{text-decoration: none;}
+.WebContainer{
+    width: 100%;
+    height: auto;
+}
+.articles{
+    width:90%; /*Takes 90% width from WebContainer*/
+    height: auto;
+    margin: auto;
+}
 .container{
     width: 100%;
     height: 100vh;
